Replaced `Collectors#toList` with single toList call